[gd_scene load_steps=2 format=3 uid="uid://db3krsdnxrscr"]

[ext_resource type="Script" path="res://scenes/player/hud.gd" id="1_7s1bm"]

[node name="Hud" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_7s1bm")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Timeout" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24

[node name="LapsInfos" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LAPS" type="Label" parent="MarginContainer/LapsInfos"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LAPS"

[node name="LapNumber" type="Label" parent="MarginContainer/LapsInfos"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="LapTime" type="Label" parent="MarginContainer/LapsInfos"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="PosInfos" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="POS" type="Label" parent="MarginContainer/PosInfos"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "POS"
horizontal_alignment = 1

[node name="Rank" type="Label" parent="MarginContainer/PosInfos"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="RaceResults" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/RaceResults"]
layout_mode = 2
size_flags_horizontal = 4
text = "Race time
"

[node name="RaceTime" type="Label" parent="MarginContainer/RaceResults"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24

[node name="LapTimes" type="VBoxContainer" parent="MarginContainer/RaceResults"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
